--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "black-dashboard-react",
+  "name": "Marvel-Universe",
   "version": "1.2.0",
   "private": true,
   "homepage": "https://waihura.github.io/marvel-universe",
